--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "private": true,
   "config": {
-    "PACKAGE_JSON_VERSION": "20.4.0-svelte.0"
+    "PACKAGE_JSON_VERSION": "20.7.0"
   },
   "repository": {
     "type": "git",
@@ -55,20 +55,19 @@
     ]
   },
   "scripts": {
-    "e": "eslint -c eslint.config.js --cache --fix",
-    "lint": "(npm run lint:cfg) && (npm run lint:src) && (npm run --if-present lint:ci) && (npm run --if-present lint:svelte)",
-    "lint:cfg": "npm run e -- package.json tsconfig.json eslint.config.js",
-    "lint:src": "npm run e -- src/**/*.ts",
-    "lint:ci": "npm run e -- .github/workflows/*.yml",
-    "lint:svelte": "(npm run e -- svelte.config.js vite.config.ts) && (npm run e -- src/**/*.svelte src/**/*.html)",
-    "check": "(svelte-kit sync) && (svelte-check --tsconfig ./tsconfig.json)",
-    "prebuild": "(npm run --if-present check) && (npm run lint)",
-    "build": "vite build",
-    "prepreview": "npm run build",
-    "preview": "vite preview",
+    "eslint": "eslint --cache --fix",
+    "lint:svelte": "(svelte-kit sync) && (svelte-check --tsconfig ./tsconfig.json) && (npm run eslint -- src/**/*.svelte)",
+    "lint:source": "npm run eslint -- src/**/*.{js,ts,html}",
+    "lint:configs": "npm run eslint -- {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
+    "lint": "(npm run --if-present lint:svelte) && (npm run lint:source) && (npm run lint:configs)",
+    "prebuild": "npm run lint",
+    "build": "(vite build) || (tsc)",
     "pretest": "npm run build",
-    "test": "npm run test:jest",
-    "test:jest": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" NODE_NO_WARNINGS=1 jest --passWithNoTests --",
-    "dev": "vite dev"
+    "test": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" NODE_NO_WARNINGS=1 jest --passWithNoTests --",
+    "prepublishOnly": "npm test",
+    "prestart": "npm test",
+    "start": "(vite preview) || (node .)",
+    "preaction": "npm test",
+    "action": "npm run test"
   }
 }
