--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "_schemaVersion": "20.13.0",
   "name": "jimmy",
   "version": "10.1.9",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -9,12 +10,16 @@
   ],
   "license": "MIT",
   "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": "github:jimmy-zhening-luo/jimmy",
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "bugs": "https://github.com/jimmy-zhening-luo/jimmy/issues",
   "type": "module",
   "main": "",
   "types": "",
+  "engineStrict": true,
   "engines": {
     "node": ">=20.15.0",
     "npm": ">=10.7.0"
@@ -33,7 +38,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "^10.4.19",
     "eslint": "~8.57.0",
-    "linted": "~15.4.12",
+    "linted": "~15.4.13",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.40",
     "svelte-check": "^3.8.4",
@@ -61,9 +66,6 @@
     "prepublishOnly": "npm test",
     "predeploy": "npm test",
     "deploy": ""
-  },
-  "config": {
-    "PACKAGE_JSON": "20.12.0"
   },
   "author": "Jimmy Zhening Luo <1450044+jimmy-zhening-luo@users.noreply.github.com> (https://jimm.my/)"
 }
