--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
   //
   // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
   // from the referenced tsconfig.json - TypeScript does not merge them in
+  "display": "@jimbojet/tsc",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "_version": "5.5.10",
   "include": [
     "*.config.ts",
     "svelte-kit/ambient.d.ts",
@@ -18,40 +21,153 @@
     "tests/**/*.svelte",
   ],
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
-    /* Projects */
-    /* Modules */
-    "moduleResolution": "bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
-    "resolveJsonModule": true, /* Enable importing .json files. */
-    /* JavaScript Support */
-    "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
-    "checkJs": true /* Enable error reporting in type-checked JavaScript files. */,
-    /* Emit */
-    "sourceMap": true /* Create source map files for emitted JavaScript files. */,
-    /* Interop Constraints */
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    /* Type Checking */
-    "strict": true /* Enable all strict type-checking options. */,
-    "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
-    "strictNullChecks": true /* When type checking, take into account 'null' and 'undefined'. */,
-    "strictFunctionTypes": true /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */,
-    "strictBindCallApply": true /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */,
-    "strictPropertyInitialization": true /* Check for class properties that are declared but not set in the constructor. */,
-    "noImplicitThis": true /* Enable error reporting when 'this' is given the type 'any'. */,
-    "useUnknownInCatchVariables": true /* Default catch clause variables as 'unknown' instead of 'any'. */,
-    "alwaysStrict": true /* Ensure 'use strict' is always emitted. */,
-    "noUnusedLocals": true /* Enable error reporting when local variables aren't read. */,
-    "noUnusedParameters": true /* Raise an error when a function parameter isn't read. */,
-    "exactOptionalPropertyTypes": true /* Interpret optional property types as written, rather than adding 'undefined'. */,
-    "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
-    "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
-    "noUncheckedIndexedAccess": true /* Add 'undefined' to a type when accessed using an index. */,
-    "noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */,
-    // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
-    "allowUnusedLabels": false /* Disable error reporting for unused labels. */,
-    "allowUnreachableCode": false /* Disable error reporting for unreachable code. */,
-    /* Completeness */
-    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+    /* http://aka.ms/tsconfig#quick-nav-Top%20Level */
+
+    // #region TYPE CHECKING
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "alwaysStrict": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    // "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "useUnknownInCatchVariables": true,
+    // #endregion
+
+
+    // #region MODULES
+    // "allowArbitraryExtensions": true,
+    // "allowImportingTsExtensions": true,
+    // "allowUmdGlobalAccess": true,
+    // "baseUrl": "./",
+    // "customConditions": [],
+    // "module": "node16",
+    "moduleResolution": "bundler",
+    // "moduleSuffixes": [],
+    // "noResolve": true,
+    // "paths": { "*": ["node_modules/*"] },
+    "resolveJsonModule": true,
+    // "resolvePackageJsonExports": true,
+    // "resolvePackageJsonImports": true,
+    // "rootDir": "src",
+    // "rootDirs": [],
+    // "typeRoots": [],
+    // "types": [
+    //   /* {CONFIGURE} */
+    // ],
+    // #endregion
+
+
+    // #region EMIT
+    // "declaration": true,
+    // "declarationDir": "dist",
+    // "declarationMap": true,
+    // "downlevelIteration": true,
+    // "emitBOM": true,
+    // "emitDeclarationOnly": true,
+    // "importHelpers": true,
+    // "inlineSourceMap": true,
+    // "inlineSources": true,
+    // "mapRoot": "",
+    // "newLine": "crlf",
+    // "noEmit": true,
+    // "noEmitHelpers": true,
+    // "noEmitOnError": true,
+    // "outDir": "dist",
+    // "outFile": "./",
+    // "preserveConstEnums": true,
+    // "removeComments": true,
+    "sourceMap": true,
+    // "sourceRoot": "",
+    // "stripInternal": true,
+    // #endregion
+
+
+    // #region JAVASCRIPT SUPPORT
+    "allowJs": true,
+    "checkJs": true,
+    // "maxNodeModuleJsDepth": 1,
+    // #endregion
+
+
+    // #region EDITOR SUPPORT
+    // "disableSizeLimit": false,
+    // "plugins": [],
+    // #endregion
+
+
+    // #region INTEROP CONSTRAINTS
+    // "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    // "isolatedDeclarations": false,
+    // "isolatedModules": true,
+    // "preserveSymlinks": true,
+    // "verbatimModuleSyntax": true,
+    // #endregion
+
+
+    // #region LANGUAGE AND ENVIRONMENT
+    // "emitDecoratorMetadata": true,
+    // "experimentalDecorators": true,
+    // "jsx": "preserve",
+    // "jsxFactory": "",
+    // "jsxFragmentFactory": "",
+    // "jsxImportSource": "",
+    // "lib": [
+    //   "es2023",
+    //   /* {CONFIGURE} */
+    // ],
+    // "moduleDetection": "auto",
+    // "noLib": true,
+    // "reactNamespace": "",
+    // "target": "es2022",
+    // "useDefineForClassFields": true,
+    // #endregion
+
+
+    // #region COMPILER DIAGNOSTICS
+    // "diagnostics": true,
+    // "explainFiles": true,
+    // "extendedDiagnostics": true,
+    // "generateCpuProfile": "profile.cpuprofile",
+    // "listEmittedFiles": true,
+    // "listFiles": true,
+    // "noCheck": true,
+    // "traceResolution": true,
+    // #endregion
+
+
+    // #region PROJECTS
+    // "composite": true,
+    // "disableReferencedProjectLoad": true,
+    // "disableSolutionSearching": true,
+    // "disableSourceOfProjectReferenceRedirect": true,
+    // "incremental": true,
+    // "tsBuildInfoFile": "dist/.tsbuildinfo",
+    // #endregion
+
+
+    // #region OUTPUT FORMATTING
+    // "noErrorTruncation": true,
+    // "preserveWatchOutput": true,
+    // "pretty": true,
+    // #endregion
+
+
+    // #region COMPLETENESS
+    "skipLibCheck": true,
+    // #endregion
   },
 }
