--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.0",
+  "_schemaVersion": "20.17.8",
   "name": "jimmy",
   "version": "10.3.1",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -26,23 +26,23 @@
   },
   "peerDependenciesMeta": {},
   "dependencies": {
-    "@fontsource/open-sans": "^5.0.29",
-    "@fontsource/overpass-mono": "^5.0.19",
-    "@fontsource/oxygen": "^5.0.14"
+    "@fontsource/open-sans": "^5.0.30",
+    "@fontsource/overpass-mono": "^5.0.20",
+    "@fontsource/oxygen": "^5.0.15"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.5.26",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "~9.9.1",
-    "linted": "~16.4.0",
+    "eslint": "~9.10.0",
+    "linted": "~16.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
     "svelte-check": "^4.0.1",
     "tailwindcss": "^3.4.10",
     "tslib": "^2.7.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "vite": "^5.4.3"
   },
   "scripts": {
@@ -54,9 +54,9 @@
     "build:svelte:prelint": "npm run ln src/**/*.svelte",
     "lint": "npm run build",
     "lint:built": "run-s lint:built:*",
-    "lint:built:configs": "npm run ln {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
-    "lint:built:source": "npm run ln src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix",
+    "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
+    "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
+    "ln": "eslint --cache --fix --no-error-on-unmatched-pattern %npm_config_files% || echo \"No linter installed.\"",
     "pretest": "npm run build",
     "test": "",
     "start": "vite preview || node .",
