--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
   // from the referenced tsconfig.json - TypeScript does not merge them in
   "display": "@jimbojet/tsc",
   "$schema": "https://json.schemastore.org/tsconfig",
-  "_version": "5.5.10",
+  "_version": "5.6.0",
   "include": [
     "*.config.ts",
     "svelte-kit/ambient.d.ts",
@@ -19,7 +19,8 @@
     "tests/**/*.js",
     "tests/**/*.ts",
     "tests/**/*.svelte",
-  ],
+    "typings/**/*.d.ts",
+  ] /* @OVERRIDE */,
   "compilerOptions": {
     /* http://aka.ms/tsconfig#quick-nav-Top%20Level */
 
