--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.8",
+  "_schemaVersion": "20.17.10-rc.1",
   "name": "jimmy",
   "version": "10.4.7",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -8,17 +8,22 @@
     "sveltekit",
     "azure-static-web-apps"
   ],
+  "repository": "github:jimmy-zhening-luo/jimmy",
+  "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
+  "bugs": "https://github.com/jimmy-zhening-luo/jimmy/issues",
   "license": "MIT",
   "private": true,
   "publishConfig": {
     "access": "public"
   },
-  "repository": "github:jimmy-zhening-luo/jimmy",
-  "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
-  "bugs": "https://github.com/jimmy-zhening-luo/jimmy/issues",
   "type": "module",
   "main": "",
   "types": "",
+  "config": {
+    "language": "svelte",
+    "fix": "true",
+    "lint": "true"
+  },
   "engineStrict": true,
   "engines": {
     "node": ">=20.17.0",
@@ -33,30 +38,51 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "autoprefixer": "^10.4.20",
     "eslint": "~9.12.0",
-    "linted": "~16.12.5",
+    "linted": "~16.13.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
+    "run-script-os": "^1.1.6",
     "svelte-check": "^4.0.5",
     "tailwindcss": "^3.4.13",
+    "ts-add-js-extension": "^1.6.4",
     "tslib": "^2.7.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   },
   "scripts": {
-    "build": "run-s \"build:{1}:*\" lint:built  --  svelte",
-    "build:ts:compile": "tsc",
-    "build:svelte:sync": "svelte-kit sync",
-    "build:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
-    "build:svelte:compile": "vite build",
-    "build:svelte:prelint": "npm run ln src/**/*.svelte",
+    "build": "run-os",
+    "build:default": "npm run rebuild -- $npm_package_config_language $npm_package_config_fix $npm_package_config_lint default",
+    "build:windows": "npm run rebuild -- %npm_package_config_language% %npm_package_config_fix% %npm_package_config_lint% windows",
+    "rebuild": "run-s \"clean:{1}:{4}\" \"compile:{1}:*\" \"fix:{2} -- {1}\" \"lint:{3} -- {1}\" --",
+    "clean:ts:default": "rm -rf dist",
+    "clean:ts:windows": "cmd /c if exist dist rmdir /s /q dist",
+    "clean:svelte:default": "rm -rf build .svelte-kit",
+    "clean:svelte:windows": "run-s clean:svelte:windows:*",
+    "clean:svelte:windows:build": "cmd /c if exist build rmdir /s /q build",
+    "clean:svelte:windows:kit": "cmd /c if exist .svelte-kit rmdir /s /q .svelte-kit",
+    "compile:ts:compile": "tsc",
+    "compile:svelte:sync": "svelte-kit sync",
+    "compile:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
+    "compile:svelte:compile": "vite build",
+    "fix:false": "echo \"Skipped fixing (fix=false)\"",
+    "fix:true": "run-s \"fix:output:{1}\" --",
+    "fix:output:ts": "ts-add-js-extension --dir=dist",
+    "fix:output:svelte": "echo \"Skipped fix for Svelte (handled by SvelteKit)\"",
     "lint": "npm run build",
-    "lint:built": "run-s lint:built:*",
-    "lint:built:configs": "npm run ln --files={*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
-    "lint:built:source": "npm run ln --files=src/**/*.{js,ts,html}",
-    "ln": "eslint --cache --fix --no-error-on-unmatched-pattern %npm_config_files% || echo \"No linter installed.\"",
+    "lint:false": "echo \"Skipped linting (lint=false)\"",
+    "lint:true": "run-s lint:all:* \"lint:scope:{1}\" --",
+    "lint:all:configs": "npm run ln -- {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
+    "lint:all:source": "npm run ln -- src/**/*.{js,ts,html}",
+    "lint:scope:ts": "echo \"Done linting TypeScript\"",
+    "lint:scope:svelte": "npm run ln -- src/**/*.svelte",
+    "ln": "eslint --cache --fix",
     "pretest": "npm run build",
     "test": "",
-    "start": "vite preview || node .",
+    "start": "run-os",
+    "start:default": "npm run starter:$npm_package_config_language",
+    "start:windows": "npm run starter:%npm_package_config_language%",
+    "starter:ts": "node .",
+    "starter:svelte": "vite preview",
     "prestart": "npm test",
     "prepublishOnly": "npm test",
     "predeploy": "npm test",
