--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.10-rc.1",
+  "_schemaVersion": "20.17.10-rc.2",
   "name": "jimmy",
   "version": "10.4.7",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -47,7 +47,7 @@
     "ts-add-js-extension": "^1.6.4",
     "tslib": "^2.7.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
   },
   "scripts": {
     "build": "run-os",
@@ -71,8 +71,8 @@
     "lint": "npm run build",
     "lint:false": "echo \"Skipped linting (lint=false)\"",
     "lint:true": "run-s lint:all:* \"lint:scope:{1}\" --",
-    "lint:all:configs": "npm run ln -- {*,.github/workflows/*}.{json,jsonc,js,ts,yml}",
-    "lint:all:source": "npm run ln -- src/**/*.{js,ts,html}",
+    "lint:all:configs": "npm run ln -- {*,.github/workflows/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
+    "lint:all:code": "npm run ln -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
     "lint:scope:ts": "echo \"Done linting TypeScript\"",
     "lint:scope:svelte": "npm run ln -- src/**/*.svelte",
     "ln": "eslint --cache --fix",
