--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "20.17.10-rc.2",
+  "_schemaVersion": "20.17.10-rc.3",
   "name": "jimmy",
   "version": "10.4.8-rc.0",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -74,7 +74,7 @@
     "lint:all:configs": "npm run ln -- {*,.github/workflows/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
     "lint:all:code": "npm run ln -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
     "lint:scope:ts": "echo \"Done linting TypeScript\"",
-    "lint:scope:svelte": "npm run ln -- src/**/*.svelte",
+    "lint:scope:svelte": "npm run ln -- {src,tests,static}/**/*.svelte",
     "ln": "eslint --cache --fix",
     "pretest": "npm run build",
     "test": "",
