--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -21,7 +21,7 @@ jobs:
         with: { node-version: 22 }
       - name: Install Dependencies
         id: ci
-        run: npm ci
+        run: npm ci --loglevel=error --fund=false
       - name: Build SWA
         id: build
         run: npm run deploy
