--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2211.5.0",
+  "$pkg": "2211.5.1",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -37,17 +37,13 @@
   "scripts": {
     "clean": "cmd --% /c \"(if exist dist rmdir /s /q dist) & (if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit) & (if exist .eslintcache del /f /q .eslintcache)\" || rm -rf dist build .svelte-kit .eslintcache",
     "prebuild": "npm run clean",
-    "build": "cmd /c \"(if exist svelte.config.js (npm run build:svelte) else (npm run build:ts))\" || bash -c 'if [ -f svelte.config.js ]; then npm run build:svelte; else npm run build:ts; fi'",
-    "build:ts": "tsc && ts-add-js-extension --dir=dist",
-    "build:svelte": "svelte-kit sync && svelte-check && vite build",
+    "build": "svelte-kit sync && svelte-check && vite build",
     "postbuild": "npm run lint || echo \"Lint failed. Continuing...\"",
     "lint": "eslint --cache --fix",
     "pretest": "npm run build",
     "test": "npm run --if-present test:mocha",
     "prestart": "npm run --ignore-scripts build",
-    "start": "cmd --% /c \"(if exist svelte.config.js (npm run start:svelte) else (npm run start:ts))\" || bash -c 'if [ -f svelte.config.js ]; then npm run start:svelte; else npm run start:ts; fi'",
-    "start:ts": "node .",
-    "start:svelte": "vite preview --open",
+    "start": "vite preview --open",
     "predeploy": "npm test",
     "deploy": ""
   },
