--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "display": "tsc@509.2.0",
-  "extends": "./.svelte-kit/tsconfig.json" /* @OVERRIDE */,
+  "extends": "./dist/tsconfig.json" /* @OVERRIDE */,
   "include": [
     "*.config.ts",
-    "svelte-kit/ambient.d.ts",
-    "svelte-kit/non-ambient.d.ts",
-    "svelte-kit/types/**/$types.d.ts",
     "src/**/*.ts",
-    "src/**/*.svelte",
-    "tests/**/*.ts",
-    "tests/**/*.svelte",
+    "src/**/*.svelte" /* @OVERRIDE */,
     "typings/**/*.d.ts",
-  ] /* @OVERRIDE: +.svelte-kit */,
+    // @OVERRIDE: +dist/tsconfig.json/include:
+    "dist/ambient.d.ts",
+    "dist/non-ambient.d.ts",
+    "dist/types/**/$types.d.ts",
+  ],
   "compilerOptions": {
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
