--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2211.5.1",
+  "$pkg": "2211.6.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -19,7 +19,6 @@
     "npm": "^10 || ^11"
   },
   "type": "module",
-  "peerDependenciesMeta": {},
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.7",
     "@fontsource/overpass-mono": "^5.2.8",
@@ -27,7 +26,7 @@
     "@sveltejs/kit": "^2.43.7",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "eslint-plugin-svelte": "~3.12.4",
-    "linted": "~31.2.11",
+    "linted": "~31.3.0",
     "svelte": "^5.39.8",
     "svelte-check": "^4.3.2",
     "tslib": "^2.8.1",
@@ -35,13 +34,13 @@
     "vite": "^7.1.8"
   },
   "scripts": {
-    "clean": "cmd --% /c \"(if exist dist rmdir /s /q dist) & (if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit) & (if exist .eslintcache del /f /q .eslintcache)\" || rm -rf dist build .svelte-kit .eslintcache",
+    "clean": "cmd --% /c \"(if exist dist rmdir /s /q dist) & (if exist build rmdir /s /q build) & (if exist .eslintcache del /f /q .eslintcache)\" || rm -rf dist build .eslintcache",
     "prebuild": "npm run clean",
     "build": "svelte-kit sync && svelte-check && vite build",
     "postbuild": "npm run lint || echo \"Lint failed. Continuing...\"",
     "lint": "eslint --cache --fix",
     "pretest": "npm run build",
-    "test": "npm run --if-present test:mocha",
+    "test": "npm run --if-present test:runner",
     "prestart": "npm run --ignore-scripts build",
     "start": "vite preview --open",
     "predeploy": "npm test",
