--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@fontsource/open-sans": "^5.2.7",
     "@fontsource/overpass-mono": "^5.2.8",
     "@sveltejs/adapter-static": "^3.0.10",
-    "@sveltejs/kit": "^2.43.8",
+    "@sveltejs/kit": "^2.46.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "eslint-plugin-svelte": "~3.12.4",
-    "linted": "~31.3.0",
-    "svelte": "^5.39.8",
+    "linted": "32.0.2",
+    "svelte": "^5.39.10",
     "svelte-check": "^4.3.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
